# NetworkReadyPython

./: .env  .env.example  .gitignore  Dockerfile  LICENSE  NRP_Syntax.md  clear_poetry_env.sh  code_executor.py  code_generator.py  compiler.py  config.json  dump.rdb  input.txt  mnist_model.h5  par_code.py  par_code_0.py  par_code_1.py  par_code_2.py  par_code_3.py  pyproject.toml  readme.md  reqfake.txt  seq_code.py  servernode.py  setup.sh  setup_end.sh  tokenizer.py
Examples/: ml_example.txt
compilerCode/: code_executor.py  code_generator.py  code_handler.py  code_verifier.py  communication.py  data_serializer.py  environment_setup.py  environment_variable.py  tokenizer.py  variable_handler.py  workspace_manager.py
user_workspace/: input.txt
