[tool.poetry]
name = "reddynet-v2-0"
version = "0.1.0"
description = ""
authors = ["avinash8419 <avihanvaisri@gmail.com>"]
readme = "README.md"
packages = [{include = "reddynet_v2"}]

[tool.poetry.dependencies]
python = "^3.11"
redis = "^5.0.8"
flask = "^3.0.3"
requests = "^2.32.3"
fastapi = "^0.114.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
